samples/_failures_safe/1761143332_795ced_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19263462.c: In function ‘main’:
./samples/SAFE/__tmp_19263462.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
